--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
 
 @import url(./blocks/header/header.css);
 @import url(./blocks/header/__logo/header__logo.css);
+@import url(./blocks/header/__reg/header__reg.css);
 
 @import url(./blocks/profile/profile.css);
 @import url(./blocks/profile/__avatar/profile__avatar.css);
@@ -70,5 +71,12 @@
 @import url(./blocks/avatar/__close-button/avatar__close-button.css);
 @import url(./blocks/avatar/__button/avatar__button.css);
 
-
 @import url(./blocks/button/_inactive/button_inactive.css);
+
+@import url(./blocks/sign/sign.css);
+@import url(./blocks/sign/__title/sign__title.css);
+@import url(./blocks/sign/__pass/sign__pass.css);
+@import url(./blocks/sign/__mail/sign__mail.css);
+@import url(./blocks/sign/__button/sign__button.css);
+@import url(./blocks/sign/__answer/sign__answer.css);
+@import url(./blocks/sign/__link/sign__link.css);
