--- a/src/blocks/sign/__mail/sign__mail.css
+++ b/src/blocks/sign/__mail/sign__mail.css
@@ -12,3 +12,16 @@
     background-color: #000000;
     display: block;
 }
+
+@media (max-width: 669px) {
+    .sign__mail {
+        font-family: 'Inter';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 17px;
+        width: 260px;
+        margin: auto;
+        margin-bottom: 30px;
+    }
+}
