--- a/src/blocks/header/__logo/header__logo.css
+++ b/src/blocks/header/__logo/header__logo.css
@@ -1,12 +1,11 @@
-@media (min-width: 670px) {
     .header__logo {
-        margin: 0 0 35px;
+        margin: 0 0 10px 0;
+        width: 142px;
     }
-}
 
-@media (max-width: 669px) {
-    .header__logo {
-        margin: 0 0 25px 27px;
-        width: 103px;
+    @media (max-width: 669px) {
+        .header__logo {
+            margin: 0 0 5px 27px;
+            width: 103px;
+        }
     }
-}
