--- a/src/blocks/header/__reg/header__reg.css
+++ b/src/blocks/header/__reg/header__reg.css
@@ -9,3 +9,15 @@
     text-decoration: none;
     margin-top: 15px;
 }
+
+@media (max-width: 669px) {
+    .header__reg {
+        margin-right: 30px;
+        margin-top: 35px;
+        font-family: 'Inter';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 17px;
+    }
+}
