--- a/src/blocks/sign/__title/sign__title.css
+++ b/src/blocks/sign/__title/sign__title.css
@@ -1,4 +1,20 @@
 .sign__title {
     color: aliceblue;
     margin: 60px auto 50px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 900;
+    font-size: 24px;
+    line-height: 29px;
+}
+
+@media (max-width: 669px) {
+    .sign__title {
+        font-family: 'Inter';
+        font-style: normal;
+        font-weight: 900;
+        font-size: 20px;
+        line-height: 24px;
+        text-align: center;
+    }
 }
