--- a/src/index.css
+++ b/src/index.css
@@ -91,3 +91,4 @@
 @import url(./blocks/sign/__button/sign__button.css);
 @import url(./blocks/sign/__answer/sign__answer.css);
 @import url(./blocks/sign/__link/sign__link.css);
+@import url(./blocks/sign/__form/sign__form.css);
